# Strim

./: Cargo.toml  README.md  WARP.md  test_shutdown.sh
src/: capture.rs  cli_commands.rs  main.rs
strim/: Cargo.toml
strim-client/: Cargo.toml
strim-client/src/: cli_commands.rs  main.rs
strim-server/: Cargo.toml
strim-server/src/: capture.rs  cli_commands.rs  main.rs
strim-shared/: Cargo.toml
strim-shared/src/: audiosample.rs  lib.rs
strim-shared/tests/: integration_tests.rs
strim/src/: cli.rs  config.rs  main.rs
strim/src/client/: mod.rs
strim/src/client/audio/: formats.rs  mod.rs  playback.rs
strim/src/client/network/: connection.rs  mod.rs  protocol.rs
strim/src/server/: mod.rs
strim/src/server/audio/: capture.rs  mod.rs
strim/src/server/network/: connection.rs  mod.rs  protocol.rs
