[workspace]
resolver = "2"
members = [
    "strim-shared",
    "strim-server", 
    "strim-client"
]

[workspace.dependencies]
cpal = "0.16.0"
ringbuf = "0.4.8"
eframe = "0.32.3"
egui_plot = "0.33.0"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
