[package]
name = "strim-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strim-server"
path = "src/main.rs"

[dependencies]
strim-shared = { path = "../strim-shared" }
cpal = { workspace = true }
ringbuf = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
